Fixing gap under login buttom on form in mobile view

--- a/matchingservice/frontend/src/formStyles.css
+++ b/matchingservice/frontend/src/formStyles.css
@@ -1298,7 +1298,7 @@
     padding: 2.5vw;
     border: 0.8vw solid #56e100;
     border-radius: 5vw;
-    margin-bottom: 100vw;
+    margin-bottom: 5vw;
   }
 
   
